--- a/src/main.css
+++ b/src/main.css
@@ -76,6 +76,39 @@ h3 {
 
 .home .hero {
   text-align: center; }
+  @media screen and (max-width: 991px) {
+    .home .hero {
+      background: url("../content/images/skyline.jpg");
+      background-size: cover;
+      height: 640px;
+      position: relative; }
+      .home .hero .content {
+        border: 2px solid #f2f2f2;
+        padding: 30px 115px 30px 115px;
+        position: absolute;
+        display: inline-block;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%); }
+      .home .hero .content h1 {
+        margin: 0; }
+      .home .hero .content h4 {
+        margin-top: 32px; }
+      .home .hero .content h1,
+      .home .hero .content h4 {
+        letter-spacing: .1em;
+        color: #f2f2f2; }
+      .home .hero .content .icon {
+        position: relative;
+        margin-top: 32px;
+        display: inline-block;
+        opacity: .8; }
+      .home .hero .content .icon .fa-linkedin-square {
+        margin-left: 0; }
+      .home .hero .content .icon .fa-github-square {
+        margin-left: 29px; }
+      .home .hero .content .icon .fa-envelope-o {
+        margin-left: 29px; } }
   @media screen and (min-width: 992px) {
     .home .hero {
       background: url("../content/images/skyline.jpg");
@@ -89,26 +122,29 @@ h3 {
         display: inline-block;
         top: 50%;
         left: 50%;
-        transform: translate(-50%, -50%); } }
-  .home .hero .content h1 {
-    margin: 0; }
-  .home .hero .content h4 {
-    margin-top: 32px; }
-  .home .hero .content h1,
-  .home .hero .content h4 {
-    letter-spacing: .1em;
-    color: #f2f2f2; }
-  .home .hero .content .icon {
-    position: relative;
-    margin-top: 32px;
-    display: inline-block;
-    opacity: .8; }
-  .home .hero .content .icon .fa-linkedin-square {
-    margin-left: 0; }
-  .home .hero .content .icon .fa-github-square {
-    margin-left: 29px; }
-  .home .hero .content .icon .fa-envelope-o {
-    margin-left: 29px; }
+        transform: translate(-50%, -50%); }
+      .home .hero .content h1 {
+        margin: 0; }
+      .home .hero .content h4 {
+        margin-top: 32px; }
+      .home .hero .content h1,
+      .home .hero .content h4 {
+        letter-spacing: .1em;
+        color: #f2f2f2; }
+      .home .hero .content .icon {
+        position: relative;
+        margin-top: 32px;
+        display: inline-block;
+        opacity: .8; }
+      .home .hero .content .icon .fa-linkedin-square {
+        margin-left: 0;
+        color: #f2f2f2; }
+      .home .hero .content .icon .fa-github-square {
+        margin-left: 29px;
+        color: #f2f2f2; }
+      .home .hero .content .icon .fa-envelope-o {
+        margin-left: 29px;
+        color: #f2f2f2; } }
 
 /*
 .home {
@@ -153,9 +189,59 @@ h3 {
 }*/
 @media screen and (max-width: 991px) {
   .backgrounds {
-    background: blue; }
+    background: blue;
+    height: 640px; }
+    .backgrounds .content-container {
+      height: 640px;
+      position: relative; }
+    .backgrounds .content-container .content {
+      position: absolute;
+      top: 50%;
+      transform: translate(0, -50%); }
+      .backgrounds .content-container .content h3 {
+        margin-top: 0; }
+    .backgrounds .image-container {
+      height: 640px;
+      text-align: center;
+      position: relative; }
+    .backgrounds .image-container .image {
+      background: url("../content/images/profile.jpg");
+      background-size: cover;
+      display: inline-block;
+      background-position-y: -5px;
+      height: 350px;
+      width: 350px;
+      border-radius: 50%;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%); }
   .programmings {
-    background: yellow; } }
+    background-color: #f6f6f6;
+    height: 640px; }
+    .programmings .content-container {
+      height: 640px;
+      position: relative; }
+    .programmings .content-container .content {
+      position: absolute;
+      top: 50%;
+      transform: translate(0, -50%); }
+      .programmings .content-container .content h3 {
+        margin-top: 0; }
+    .programmings .image-container {
+      height: 640px;
+      position: relative; }
+    .programmings .image-container .image {
+      background: url("../content/images/desk.jpg");
+      background-size: cover;
+      background-position-y: -85px;
+      border-radius: 50%;
+      width: 350px;
+      height: 350px;
+      top: 50%;
+      left: 50%;
+      position: absolute;
+      transform: translate(-50%, -50%); } }
 
 @media screen and (min-width: 992px) {
   .backgrounds {
@@ -345,10 +431,62 @@ html {
   overflow-y: scroll; }
 
 h1 {
-  font-family: OpenSans-Bold; }
+  font-family: OpenSans-Bold;
+  font-size: 48px; }
 
 p {
   font-family: OpenSans-Regular; }
+
+@media screen and (min-width: 1200px) {
+  h1 {
+    font-size: 48px;
+    line-height: 52px; }
+  h2 {
+    font-size: 36px;
+    line-height: 40px; }
+  h3 {
+    font-size: 28px;
+    line-height: 32px; }
+  h4 {
+    font-size: 18px;
+    line-height: 24px; }
+  .body1 {
+    font-size: 16px;
+    line-height: 22px; } }
+
+@media screen and (min-width: 992px) and (max-width: 1199px) {
+  h1 {
+    font-size: 40px;
+    line-height: 44px; }
+  h2 {
+    font-size: 32px;
+    line-height: 36px; }
+  h3 {
+    font-size: 24px;
+    line-height: 28px; }
+  h4 {
+    font-size: 18px;
+    line-height: 22px; }
+  .body1 {
+    font-size: 16px;
+    line-height: 22px; } }
+
+@media screen and (max-width: 768px) {
+  h1 {
+    font-size: 32px;
+    line-height: 36px; }
+  h2 {
+    font-size: 26px;
+    line-height: 30px; }
+  h3 {
+    font-size: 22px;
+    line-height: 26px; }
+  h4 {
+    font-size: 18px;
+    line-height: 22px; }
+  .body1 {
+    font-size: 16px;
+    line-height: 20px; } }
 
 .navbar a {
   color: #CCCCCC;
